# WalDroid-NetTest-

./: .gitignore
Walet/: settings.gradle.kts
Walet/app/: build.gradle.kts  proguard-rules.pro
Walet/app/src/androidTest/java/mx/angeldl/walet/: ExampleInstrumentedTest.kt
Walet/app/src/main/: AndroidManifest.xml
Walet/app/src/main/java/mx/angeldl/walet/: MainActivity.kt
Walet/app/src/main/java/mx/angeldl/walet/core/: EncryptedSeedStore.kt
Walet/app/src/main/java/mx/angeldl/walet/screens/: MainScreen.kt
Walet/app/src/main/java/mx/angeldl/walet/ui/theme/: Color.kt  Theme.kt  Type.kt
Walet/app/src/main/java/mx/angeldl/wallet/core/: BtcWalletCore.kt
Walet/app/src/main/res/values/: strings.xml  themes.xml
Walet/gradle/: libs.versions.toml
Walet/gradle/wrapper/: gradle-wrapper.properties
rsLib/: Cargo.toml
rsLib/src/: lib.rs
